--- a/css/styles.css
+++ b/css/styles.css
@@ -42,3 +42,37 @@
 .gallery__link:hover {
   cursor: zoom-in;
 }
+
+
+/* ============== */
+
+
+body.show-modal .backdrop {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: initial;
+}
+
+
+body.show-modal .modal {
+  transform: scale(1);
+}
+
+
+.backdrop {
+display: flex;
+justify-content: center;
+align-items: center;
+position: fixed;
+top: 0;
+left: 0;
+width: 100vw;
+height: 100vh;
+background-color: rgba(0, 0, 0, 0.3);
+z-index: 999;
+
+pointer-events: none;
+opacity: 0;
+visibility: hidden;
+transition: opacity 200ms ease-in-out, visibility 200ms ease-in-out;
+}
