--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@
 /* ============== */
 
 
-body.show-modal .backdrop {
+/* body.show-modal .backdrop {
   opacity: 1;
   visibility: visible;
   pointer-events: initial;
@@ -75,4 +75,4 @@ pointer-events: none;
 opacity: 0;
 visibility: hidden;
 transition: opacity 200ms ease-in-out, visibility 200ms ease-in-out;
-}
+} */
